add enviroment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/nahuelchinchilla
-spring.datasource.username=nahuelchinchilla
-spring.datasource.password=
-
+spring.datasource.url=${SPRING.DATASOURCE.URL}
+spring.datasource.username=${DATABASE.USERNAME}
+spring.datasource.password=${DATABASE.PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
+
 
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
